<resources>
    <string name="app_name">soccer-quiz</string>
    <string name="title">Soccer Quiz</string>
    <string name="start_button_text">Let\'s play</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_question">Question</string>
    <string name="third_answer">Third answer</string>
    <string name="second_answer">Second answer</string>
    <string name="first_answer">First answer</string>
    <string name="answer">ANSWER</string>
    <string name="miss_message">You have missed :C</string>
    <string name="one_more_time">One more time?</string>
    <string name="goal">Goal!</string>
    <string name="welcome_screen_fragment_name">Soccer Quiz</string>
    <string name="rules_fragment_name">Rules</string>
    <string name="rules">You need to answer correctly 3 random questions</string>
    <string name="rules_title">Rules of the game</string>
</resources>