<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.soccer_quiz.QuizFragment">

    <data>

        <variable
            name="quizFragment"
            type="com.example.soccer_quiz.QuizFragment" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/quizLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivSoccerField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/football_field"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="447dp" />

                <ImageView
                    android:id="@+id/ivBall"
                    android:layout_width="65dp"
                    android:layout_height="61dp"
                    android:src="@drawable/ball"
                    app:layout_constraintBottom_toBottomOf="@+id/ivSoccerField"
                    app:layout_constraintEnd_toEndOf="@+id/ivSoccerField"
                    app:layout_constraintStart_toStartOf="@+id/ivSoccerField"
                    app:layout_constraintTop_toTopOf="@+id/ivSoccerField"
                    app:layout_constraintVertical_bias="0.63" />

                <TextView
                    android:id="@+id/quizTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="sans-serif-black"
                    android:shadowColor="@color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="4"
                    android:text="@string/title"
                    android:textColor="@color/white"
                    android:textSize="48sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/rgQuiz"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvQuestion">

                    <RadioButton
                        android:id="@+id/rbFirst"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@{quizFragment.answers[0]}"
                        tools:text="@string/first_answer"
                        android:checked="true"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rbSecond"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@{quizFragment.answers[1]}"
                        tools:text="@string/second_answer"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rbThird"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@{quizFragment.answers[2]}"
                        tools:text="@string/third_answer"
                        android:textSize="16sp" />

                </RadioGroup>

                <TextView
                    android:id="@+id/tvQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{quizFragment.currentQuizItem.question}"
                    android:textSize="18sp"
                    android:layout_marginTop="36dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    tools:text="@string/hint_question"
                    app:layout_constraintBottom_toTopOf="@+id/rgQuiz"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivBall" />

                <Button
                    android:id="@+id/btAnswer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/answer"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
