<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MissFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/missLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivSoccerField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/football_field"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="447dp" />

        <ImageView
            android:id="@+id/ivSmiley"
            android:layout_width="65dp"
            android:layout_height="61dp"
            android:src="@drawable/smiley"
            app:layout_constraintBottom_toBottomOf="@+id/ivSoccerField"
            app:layout_constraintEnd_toEndOf="@+id/ivSoccerField"
            app:layout_constraintStart_toStartOf="@+id/ivSoccerField"
            app:layout_constraintTop_toTopOf="@+id/ivSoccerField"
            app:layout_constraintVertical_bias="0.63" />

        <TextView
            android:id="@+id/quizTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-black"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miss_message"
            android:textSize="24sp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivSmiley" />

        <Button
            android:id="@+id/btOneMoreTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/one_more_time"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

